--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   path: ^1.8.2
   path_provider: ^2.0.11
   equatable: ^2.0.5
+  font_awesome_flutter: ^10.3.0
+  animated_text_kit: ^4.2.2
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
@@ -69,9 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
