--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   font_awesome_flutter: ^10.3.0
   animated_text_kit: ^4.2.2
   image_picker: ^0.8.6
+  carousel_slider: ^4.2.1
+  confetti: ^0.7.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
